--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
-  "buildCommand": "npm run build-storybook",
-  "devCommand": "npm run storybook",
+  "buildCommand": "npm run build-sb",
+  "devCommand": "npm run sb",
   "installCommand": "npm install",
   "framework": null,
   "outputDirectory": "./storybook-static"
